<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>goal_updater</name>
  <version>0.0.1</version>
  <description>Publish goals to map, so they can be visible in map_viewer</description>
  <maintainer email="estebanzapirain@gmail.com">robot1</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>map_interface</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>threading</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
